This commit will
add 2 entitites: pictures and team
creat one to many relations: team (one) to (many) athletes, boats, regattas, ergs, oars, riggers and finances

--- a/elements/crew-team-manager-erg/crew-team-manager-erg-detail-results.html
+++ b/elements/crew-team-manager-erg/crew-team-manager-erg-detail-results.html
@@ -72,6 +72,9 @@
                     </div>
                 </div>
                 <div id="erg-details">
+                    <div id="team">
+                        Team: [[team.teamName]]
+                    </div>
                     <div id="subhead">
                         Details:
                     </div>
@@ -102,6 +105,10 @@
                 return {
                     data: {
                         type: Object,
+                    },
+
+                    team: {
+                        type: Object
                     }
                 }
             }
