--- a/elements/crew-team-manager-finance/crew-team-manager-finance-detail-results.html
+++ b/elements/crew-team-manager-finance/crew-team-manager-finance-detail-results.html
@@ -62,6 +62,9 @@
                     <div id="subhead">
                         Summary:
                     </div>
+                    <div id="team">
+                        Team: [[team.teamName]]
+                    </div>
                     <div id="incomes">
                         Incomes: $[[data.incomes]]
                     </div>
@@ -89,6 +92,10 @@
                 return {
                     data: {
                         type: Object,
+                    },
+
+                    team: {
+                        type: Object
                     }
                 }
             }
