--- a/elements/crew-team-manager-picture/crew-team-manager-picture-list-results.html
+++ b/elements/crew-team-manager-picture/crew-team-manager-picture-list-results.html
@@ -1,12 +1,13 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
 
 <link rel="import" href="../../bower_components/iron-list/iron-list.html">
+<link rel="import" href="../../bower_components/iron-image/iron-image.html">
 
 <link rel="import" href="../../bower_components/paper-styles/typography.html">
 
 <link rel="import" href="../crew-team-manager-avatar/crew-team-manager-avatar.html">
 
-<dom-module id="crew-team-manager-rigger-list-results">
+<dom-module id="crew-team-manager-picture-list-results">
     <template>
         <style>
              :host {
@@ -24,45 +25,42 @@
                 right: 0px;*/
             }
 
-            .rigger {
+            .picture {
                 background-color: white;
                 @apply(--layout-horizontal);
                 border-bottom: solid 1px grey;
             }
 
-            .rigger-avatar {
+            .picture-avatar {
                 margin: 8px;
             }
 
-            .rigger-info {
+            .picture-info {
                 font-size: 18px;
                 @apply(--layout-flex);
                 padding: 8px;
             }
 
-            .rigger-info-name {
+            .picture-info-caption {
                 @apply(--paper-font-title);
             }
 
-            .rigger-info-helpers {
+            .picture-info-location {
                 @apply(--paper-font-caption);
             }
         </style>
 
-        <firebase-document id="firebase" app-name="crew-team-manager" path="/boats/{{data.boat}}" data="{{_boat}}">
-        </firebase-document>
-
         <iron-list id="list" items="[[data]]" as="item">
             <template>
-                <div class="rigger" on-click="_handleItemClick">
+                <div class="picture" on-click="_handleItemClick">
 
-                    <crew-team-manager-avatar class="rigger-avatar" value="boat.name"></crew-team-manager-avatar>
-                    <div class="rigger-info">
-                        <div class="rigger-info-name">
-                            boat.name
+                    <crew-team-manager-avatar class="picture-avatar" value="[[item.caption]]"></crew-team-manager-avatar>
+                    <div class="picture-info">
+                        <div class="picture-info-caption">
+                            [[item.caption]]
                         </div>
-                        <div class="rigger-info-helpers">
-                            [[item.side]] [[item.seat]]
+                        <div class="picture-info-location">
+                            <iron-image src="[[item.url]]" style="width:200px; height:200px;" sizing="contain"></iron-image>
                         </div>
                     </div>
                 </div>
@@ -72,16 +70,10 @@
 
     <script>
         // Extend Polymer.Element with MyMixin
-        class crewTeamManagerRiggerListResults extends Polymer.Element {
+        class crewTeamManagerPictureListResults extends Polymer.Element {
 
             static get is() {
-                return 'crew-team-manager-rigger-list-results'
-            }
-
-            static get observers() {
-                return [
-                    '_getData(data, _boat)'
-                ]
+                return 'crew-team-manager-picture-list-results'
             }
 
             static get properties() {
@@ -90,29 +82,24 @@
                         type: Object,
                     },
 
-                    _boat: {
-                        type: Object
+                    _name: {
+                        type: String
                     }
                 }
             }
 
-            _getData(data, data2) {
-                console.log(data);
-                console.log(data2);
-            }
-
             _handleItemClick(e) {
-                this.dispatchEvent(new CustomEvent(crewTeamManagerRiggerListResults.is + '-action-detail', {
+                this.dispatchEvent(new CustomEvent(crewTeamManagerPictureListResults.is + '-action-detail', {
                     bubbles: true,
                     composed: true,
                     detail: {
-                        rigger: e.model.item.$key
+                        picture: e.model.item.$key
                     }
                 }));
             }
         }
 
         // Register custom element definition using standard platform API
-        customElements.define(crewTeamManagerRiggerListResults.is, crewTeamManagerRiggerListResults);
+        customElements.define(crewTeamManagerPictureListResults.is, crewTeamManagerPictureListResults);
     </script>
 </dom-module>
