--- a/elements/crew-team-manager-fleet/crew-team-manager-fleet-detail.html
+++ b/elements/crew-team-manager-fleet/crew-team-manager-fleet-detail.html
@@ -59,7 +59,9 @@
             }
         </style>
 
-        <firebase-document id="firebase" app-name="crew-team-manager" path="/boats/{{boat}}" data="{{_data}}">
+        <firebase-document id="firebase" app-name="crew-team-manager" path="/boats/{{boat}}" data="{{_data}}"> </firebase-document>
+
+        <firebase-document id="firebase" app-name="crew-team-manager" path="/teams/{{_data.team}}" data="{{_team}}">
         </firebase-document>
 
         <app-header-layout id="layout">
@@ -74,7 +76,7 @@
             </app-header>
             <iron-pages id="pages" attr-for-selected="id" selected="[[_page]]">
                 <crew-team-manager-fleet-detail-loading id="loading"></crew-team-manager-fleet-detail-loading>
-                <crew-team-manager-fleet-detail-results id="results" data="{{_data}}"></crew-team-manager-fleet-detail-results>
+                <crew-team-manager-fleet-detail-results id="results" data="{{_data}}" team={{_team}}></crew-team-manager-fleet-detail-results>
                 <crew-team-manager-fleet-detail-message id="message"></crew-team-manager-fleet-detail-message>
             </iron-pages>
 
@@ -92,13 +94,6 @@
                 return 'crew-team-manager-fleet-detail'
             }
 
-            static get observers() {
-                return [
-                    '_updatePage(boat)'
-                ]
-
-            }
-
             static get properties() {
                 return {
                     _page: {
@@ -107,6 +102,11 @@
                     },
 
                     _data: {
+                        type: Object,
+                        value: {}
+                    },
+
+                    _team: {
                         type: Object,
                         value: {}
                     },
