--- a/elements/crew-team-manager-oar/crew-team-manager-oar-detail-results.html
+++ b/elements/crew-team-manager-oar/crew-team-manager-oar-detail-results.html
@@ -72,6 +72,9 @@
                     <div id="subhead">
                         Details:
                     </div>
+                    <div id="team">
+                        Team: [[team.teamName]]
+                    </div>
                     <div id="color">
                         Color: [[data.color]]
                     </div>
@@ -102,6 +105,10 @@
                 return {
                     data: {
                         type: Object,
+                    },
+
+                    team: {
+                        type: Object
                     }
                 }
             }
