--- a/elements/crew-team-manager-team/crew-team-manager-team-detail-results.html
+++ b/elements/crew-team-manager-team/crew-team-manager-team-detail-results.html
@@ -1,12 +1,13 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
 
 <link rel="import" href="../../bower_components/iron-list/iron-list.html">
+<link rel="import" href="../../bower_components/iron-image/iron-image.html">
 
 <link rel="import" href="../../bower_components/paper-card/paper-card.html">
 
 <link rel="import" href="../crew-team-manager-avatar/crew-team-manager-avatar.html">
 
-<dom-module id="crew-team-manager-roster-detail-results">
+<dom-module id="crew-team-manager-team-detail-results">
     <template>
         <style>
              :host {
@@ -26,13 +27,13 @@
                 @apply(--layout-flex);
             }
 
-            #athlete-avatar {
+            #team-avatar {
                 @apply(--layout-horizontal);
                 @apply(--layout-center-justified);
                 margin: 8px;
             }
 
-            #athlete-name {
+            #team-name {
                 font-size: 24px;
                 text-align: Center;
                 font-style: bold;
@@ -44,21 +45,17 @@
                 font-weight: bold;
             }
 
-            #athlete-year {
-                font-size: 16px;
-            }
-
-            #athlete-contact {
+            #team-location {
                 border-bottom: solid 1px grey;
                 padding: 16px;
             }
 
-            #athlete-basic {
+            #team-image {
                 border-bottom: solid 1px grey;
                 padding: 16px;
             }
 
-            #athlete-row {
+            #team-detail {
                 border-bottom: solid 1px grey;
                 padding: 16px;
             }
@@ -66,58 +63,36 @@
 
         <div id="content">
 
-            <paper-card id="athlete">
-                <crew-team-manager-avatar id="athlete-avatar" value="[[data.firstName]]" large></crew-team-manager-avatar>
-                <div id="athlete-name">
-                    [[data.firstName]] [[data.lastName]]
-                    <div id="athlete-year">([[data.year]]) </div>
+            <paper-card id="team">
+                <crew-team-manager-avatar id="team-avatar" value="[[data.teamName]]" large></crew-team-manager-avatar>
+                <div id="team-name">
+                    [[data.teamName]]
                 </div>
-                <div id="athlete-contact">
+                <div id="team-location">
                     <div id="subhead">
-                        Contact information:
+                        Location:
                     </div>
                     <div id="location">
                         [[data.streetAddress]], [[data.city]], [[data.state]]
                     </div>
-                    <div id="phone">
-                        Phone number: [[data.phone]]
+                </div>
+                <div id="team-detail">
+                    <div id="subhead">
+                        Color:
+                    </div>
+                    <div id="color">
+                        Team Color: [[data.color]]
                     </div>
                 </div>
-                <div id="athlete-basic">
+                <div id="team-image">
                     <div id="subhead">
-                        Basic inforomation:
+                        Logo:
                     </div>
-                    <div id="team">
-                        Team: [[team.teamName]]
+                    <div id="image">
+                        <iron-image src="[[data.logo]]"></iron-image>
                     </div>
-                    <div id="height">
-                        Height: [[data.height]]
-                    </div>
-                    <div id="weight">
-                        Weight: [[data.weight]]
-                    </div>
-                    <div id="gender">
-                        Gender: [[data.gender]]
-                    </div>
+                </div>
 
-                    <div id="driver">
-                        Can drive? [[data.driver]]
-                    </div>
-                </div>
-                <div id="athlete-row">
-                    <div id="subhead">
-                        Stats:
-                    </div>
-                    <div id="2k">
-                        2k time: [[data.ergScore]]
-                    </div>
-                    <div id="side">
-                        Rowing Side: [[data.side]]
-                    </div>
-                    <div id="funds">
-                        Fundraising: [[data.fundRaising]]
-                    </div>
-                </div>
 
             </paper-card>
         </div>
@@ -125,26 +100,22 @@
 
     <script>
         // Extend Polymer.Element with MyMixin
-        class crewTeamManagerRosterDetailResults extends Polymer.Element {
+        class crewTeamManagerTeamDetailResults extends Polymer.Element {
 
             static get is() {
-                return 'crew-team-manager-roster-detail-results'
+                return 'crew-team-manager-team-detail-results'
             }
 
             static get properties() {
                 return {
                     data: {
                         type: Object,
-                    },
-
-                    team: {
-                        type: Object
                     }
                 }
             }
         }
 
         // Register custom element definition using standard platform API
-        customElements.define(crewTeamManagerRosterDetailResults.is, crewTeamManagerRosterDetailResults);
+        customElements.define(crewTeamManagerTeamDetailResults.is, crewTeamManagerTeamDetailResults);
     </script>
 </dom-module>
